cmake: add fallback for non-SSE2 builds
Since piglit is highly tied to correct calculation,
rather slowdown on non-SSE2 builds than produce incorrect results.

Closes: https://gitlab.freedesktop.org/mesa/piglit/-/issues/68

Tested-by: Abernikhin Illia <illia.abernikhin@globallogic.com>
Signed-off-by: David Heidelberg <david.heidelberg@collabora.com>
Part-of: <https://gitlab.freedesktop.org/mesa/piglit/-/merge_requests/778>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -255,8 +255,13 @@ endif(NOT CMAKE_BUILD_TYPE)
 
 if (NOT MSVC)
 	if (PIGLIT_SSE2 AND CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)")
+		# enables SSE2 and precision used on x86-64 by default
 		SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse2 -mfpmath=sse")
 		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2 -mfpmath=sse")
+	else()
+		# degrade performance a bit, but enforce required precision
+		SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ffloat-store")
+		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffloat-store")
 	endif()
 	CHECK_C_COMPILER_FLAG("-Wall" C_COMPILER_FLAG_WALL)
 	IF (C_COMPILER_FLAG_WALL)
