ci: enforce urllib3 version 1.x to prevent CI breakage
Signed-off-by: David Heidelberg <david.heidelberg@collabora.com>
Part-of: <https://gitlab.freedesktop.org/mesa/piglit/-/merge_requests/810>

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,7 @@ deps =
     {accel,noaccel,streams}: jsonschema
     streams: jsonstreams>=0.4.1
     {accel,noaccel,functional}: pyyaml
+    {accel,noaccel,functional}: urllib3<2
     {accel,noaccel,functional}: requests
     {accel,noaccel,functional}: Pillow
 commands =
