replayer: create bin/ everytime
When we build only a small subset of features, the bin directory
isn't prepared yet, so we need to be sure, it's there for us.

Reviewed-by: Vignesh Raman <vignesh.raman@collabora.com>
Signed-off-by: David Heidelberg <david.heidelberg@collabora.com>
Part-of: <https://gitlab.freedesktop.org/mesa/piglit/-/merge_requests/903>

--- a/replayer/CMakeLists.txt
+++ b/replayer/CMakeLists.txt
@@ -37,6 +37,8 @@ set(piglit_replayer_depends
 	${CMAKE_SOURCE_DIR}/replayer/replayer.py
 	)
 
+file(MAKE_DIRECTORY ${piglit_BINARY_DIR}/bin)
+
 add_custom_command(
 	OUTPUT ${piglit_replayer_outputs}
 	DEPENDS ${piglit_replayer_depends}
