Python: Lock numpy to 1.x
numpy broke API for 2.0, and Piglit doesn't work with it.

Signed-off-by: Daniel Stone <daniels@collabora.com>
Part-of: <https://gitlab.freedesktop.org/mesa/piglit/-/merge_requests/946>

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ setenv =
     USERNAME = foo
 deps =
     accel-nix: lxml
-    py{37,38,39,310,311}-generator: numpy
+    py{37,38,39,310,311}-generator: numpy<2.0
     py{37,38,39,310,311}: mako>=1.1.0
 
     {accel,noaccel,generator,streams}: pytest>=6.2.5
