tests: Add tests for EGL_EXT_device_query_name and EGL_EXT_device_persistent_id
Signed-off-by: Christoph Neuhauser <christoph.neuhauser@intel.com>
Reviewed-by: Tapani Pälli <tapani.palli@intel.com>
Part-of: <https://gitlab.freedesktop.org/mesa/piglit/-/merge_requests/1018>

--- a/tests/egl/spec/CMakeLists.txt
+++ b/tests/egl/spec/CMakeLists.txt
@@ -2,6 +2,8 @@ add_subdirectory (egl-1.4)
 add_subdirectory (egl_ext_client_extensions)
 add_subdirectory (egl_ext_device_base)
 add_subdirectory (egl_ext_device_query)
+add_subdirectory (egl_ext_device_query_name)
+add_subdirectory (egl_ext_device_persistent_id)
 add_subdirectory (egl_ext_device_enumeration)
 add_subdirectory (egl_ext_device_drm)
 add_subdirectory (egl_ext_platform_device)
