draw-prim-rate: test mesh shader perf
linting is disabled because it's difficult to use and isn't useful to
the project. We need better standards for what we put in the CI.

Part-of: <https://gitlab.freedesktop.org/mesa/piglit/-/merge_requests/1045>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,12 +84,12 @@ windows:
   image: $WINDOWS_IMAGE
 
 # CHECK
-linting:
+.linting:
   stage: check
   extends:
     - .use-debian
   script:
-    - codespell -f -S ".mypy_cache,drm_fourcc.h" -L "lod,inout,nd,valu,tese,ba,te,nin,marge,stach"
+    - codespell -f -S ".mypy_cache,drm_fourcc.h" -L "lod,inout,nd,valu,tese,ba,te,nin,marge,stach,MONE"
     - export CHECKPATH=framework/replay # restrict Python checks only on framework/replay for now
     - isort --check-only $CHECKPATH
     - flake8 --max-line-length=120 --show-source $CHECKPATH
